--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
       content="Российское решение для видеоконференций с интеграцией ЕСИА и AI-обработкой встреч"
     />
     <meta property="og:type" content="website" />
-    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 
-    <!-- <meta name="twitter:card" content="summary_large_image" /> -->
-    <!-- <meta name="twitter:site" content="@lovable_dev" /> -->
-    <!-- <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
+    <meta property="og:image" content="https://zvon.online/og-image.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="https://zvon.online/og-image.png" />
   </head>
 
   <body>
